# neuralflow

./: .coverage  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
config/: config.py  default.yaml  user_config.yaml.example
docs/: README.md  data_ingestion.md  storage.md  training.md
docs/api/: README.md
docs/architecture/: README.md  WORKFLOW.md  memory.md  response.md  system-overview.md
docs/cloud_training/: README.md
docs/deployment/: .env-example  README.md  deployment-guide.md
docs/development/: CLAUDE.md  README.md
docs/examples/: README.md  basic_usage.md  caching.py  langchain_integration.md  vector_store.md  web_search.md
docs/flows/: README.md  data-flows.md
docs/guides/: README.md  debugging.md  ui.md
docs/technical/: api-reference.md  implementation.md
examples/: langchain_workflow_example.py
examples/basic/: llm_integration.py  simple_workflow.py  vector_storage.py  workflow_example.py
examples/cloud_training/: README.md  distributed_train.py  hyperparameter_tuning.py  train.py
requirements/: base.txt  langchain.txt  prod.txt
scripts/: deploy.py  docker-manage.sh  organize_docs.sh  run.sh  setup.py  setup_env.sh  switch_model.py  train.py
src/: main.py  reorganize.py
src/api/: README.md
src/config/: __init__.py  config.py  config_manager.py  environment.py  langchain_config.py  models.py  production.yaml  settings.py  user_config.yaml.example
src/core/: README.md  __init__.py
src/infrastructure/: README.md
src/neuralflow/: README.md  __init__.py  config.py  main.py
src/storage/: test_document.txt
tests/: README.md  __init__.py  conftest.py  test_langchain_workflow.py  test_workflow.py
tests/acceptance/: test_acceptance.py
tests/api/: test_api.py
tests/core/: test_graph.py
tests/data/: test_data.py
tests/e2e/: test_complete_workflow.py  test_e2e.py
tests/fixtures/: test_fixtures.py  workflow_fixtures.py
tests/infrastructure/: test_infrastructure.py
tests/integration/: test_integration.py
tests/performance/: test_performance.py  test_vector_store_performance.py  test_workflow_performance.py
(+301 files in other folders)
