[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuralflow"
version = "0.1.0"
description = "Advanced LLM Workflow Orchestration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Yavuz Topsever", email = "yavuz.topsever@windowslive.com"}
]
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
    "aiohttp>=3.8.5",
    "asyncio>=3.4.3",
    "structlog>=23.1.0",
    "prometheus-client>=0.17.1",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "redis>=4.5.0",
    "aioredis>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.3.0",
    "pylint>=2.17.0",
    "sphinx>=6.2.1",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.3.1",
    "pytest-benchmark>=4.0.0",
    "types-redis>=4.5.0",
    "types-PyYAML>=6.0.12",
    "types-python-dateutil>=2.8.19",
]
prod = [
    "gunicorn>=21.2.0",
    "uvicorn>=0.23.0",
    "fastapi>=0.100.0",
    "pydantic-settings>=2.0.0",
    "sentry-sdk>=1.29.0",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0.1",
    "ujson>=5.7.0",
    "orjson>=3.9.0",
    "msgpack>=1.0.5",
]

[project.urls]
Homepage = "https://github.com/yavuztopsever/neuralflow"
Repository = "https://github.com/yavuztopsever/neuralflow.git"

[tool.setuptools]
packages = ["neuralflow"]

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=neuralflow --cov-report=term-missing"
asyncio_mode = "auto"
